--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -148,6 +148,7 @@ set_real_ip_from 141.98.11.62;
 set_real_ip_from 143.20.64.235;
 set_real_ip_from 144.126.133.74;
 set_real_ip_from 146.103.43.17;
+set_real_ip_from 146.190.27.145;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
 set_real_ip_from 149.102.153.38;
@@ -529,7 +530,6 @@ set_real_ip_from 188.68.52.231;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
-set_real_ip_from 192.108.48.150;
 set_real_ip_from 192.159.99.168;
 set_real_ip_from 192.159.99.74;
 set_real_ip_from 192.42.116.13;
@@ -639,7 +639,7 @@ set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
-set_real_ip_from 198.167.206.203;
+set_real_ip_from 198.167.206.212;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -690,7 +690,6 @@ set_real_ip_from 2001:470:1f06:2b4::2;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:620:20d0::23;
 set_real_ip_from 2001:620:20d0::24;
-set_real_ip_from 2001:638:301:f732::150;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
@@ -777,6 +776,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:b011:4006:545c::b;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
+set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 202.182.99.129;
 set_real_ip_from 202.71.14.142;
@@ -815,6 +815,7 @@ set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.58.254;
+set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.38.189.186;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
@@ -952,10 +953,10 @@ set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.3;
+set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
-set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1246,6 +1247,7 @@ set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 set_real_ip_from 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
+set_real_ip_from 2a03:b0c0:2:f0::da31:5001;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
 set_real_ip_from 2a03:e600:100::3;
@@ -1595,6 +1597,7 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:200;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
+set_real_ip_from 2a12:a800:2:1:45:141:215:238;
 set_real_ip_from 2a12:a800:2:1:45:141:215:28;
 set_real_ip_from 2a12:a800:2:1:45:141:215:40;
 set_real_ip_from 2a12:a800:2:1:45:141:215:56;
@@ -1692,6 +1695,7 @@ set_real_ip_from 45.141.215.17;
 set_real_ip_from 45.141.215.19;
 set_real_ip_from 45.141.215.200;
 set_real_ip_from 45.141.215.21;
+set_real_ip_from 45.141.215.238;
 set_real_ip_from 45.141.215.28;
 set_real_ip_from 45.141.215.40;
 set_real_ip_from 45.141.215.56;
@@ -1797,6 +1801,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.108.162;
+set_real_ip_from 54.36.187.187;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
@@ -1939,7 +1944,6 @@ set_real_ip_from 94.72.104.135;
 set_real_ip_from 94.74.164.89;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.143.193.125;
-set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 96.8.119.172;
 set_real_ip_from 98.128.173.33;
