--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -25,7 +25,6 @@ set_real_ip_from 2001:470:1f06:2b4::2;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:620:20d0::23;
 set_real_ip_from 2001:620:20d0::24;
-set_real_ip_from 2001:638:301:f732::150;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
@@ -112,6 +111,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:b011:4006:545c::b;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
+set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
@@ -391,6 +391,7 @@ set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 set_real_ip_from 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
+set_real_ip_from 2a03:b0c0:2:f0::da31:5001;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
 set_real_ip_from 2a03:e600:100::3;
@@ -740,6 +741,7 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:200;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
+set_real_ip_from 2a12:a800:2:1:45:141:215:238;
 set_real_ip_from 2a12:a800:2:1:45:141:215:28;
 set_real_ip_from 2a12:a800:2:1:45:141:215:40;
 set_real_ip_from 2a12:a800:2:1:45:141:215:56;
