--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -301,6 +301,7 @@ allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
+allow 185.156.72.7;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -819,7 +820,6 @@ allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
-allow 212.95.50.77;
 allow 212.95.54.78;
 allow 213.111.150.96;
 allow 216.239.90.19;
@@ -942,7 +942,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -950,10 +949,9 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.28;
+allow 23.191.200.27;
 allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -1216,6 +1214,7 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1266,6 +1265,7 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1293,8 +1293,6 @@ allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
-allow 2a06:1700:1:108::b829:eee2;
-allow 2a06:1700:1:109::209:a94;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1640,8 +1638,6 @@ allow 37.114.63.5;
 allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
-allow 37.228.129.162;
-allow 37.228.129.168;
 allow 37.228.129.189;
 allow 37.228.129.5;
 allow 37.228.129.63;
@@ -1781,6 +1777,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 52.233.83.66;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1805,7 +1802,6 @@ allow 5.2.79.190;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 54.36.111.72;
-allow 54.36.187.187;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
@@ -1861,8 +1857,8 @@ allow 82.221.131.5;
 allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.145;
+allow 82.68.49.227;
 allow 83.147.17.190;
-allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1873,7 +1869,6 @@ allow 84.239.46.144;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 85.93.31.31;
-allow 86.11.246.178;
 allow 86.54.28.49;
 allow 87.118.110.27;
 allow 87.118.116.103;
