--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -360,6 +360,7 @@ deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
+deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
@@ -410,6 +411,7 @@ deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -437,8 +439,6 @@ deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
-deny 2a06:1700:1:108::b829:eee2;
-deny 2a06:1700:1:109::209:a94;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
