--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -181,7 +181,6 @@ allow 164.132.172.209;
 allow 164.132.58.8;
 allow 165.73.242.163;
 allow 166.70.207.2;
-allow 168.119.166.187;
 allow 171.25.193.131;
 allow 171.25.193.20;
 allow 171.25.193.234;
@@ -203,7 +202,6 @@ allow 172.104.243.155;
 allow 172.105.174.195;
 allow 172.105.20.12;
 allow 172.105.203.121;
-allow 172.212.105.150;
 allow 172.232.209.254;
 allow 172.233.82.41;
 allow 172.234.228.174;
@@ -218,7 +216,6 @@ allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
-allow 176.65.134.4;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
@@ -638,7 +635,7 @@ allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
-allow 198.167.206.252;
+allow 198.167.206.214;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -800,7 +797,6 @@ allow 205.185.121.177;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 206.166.251.193;
-allow 20.79.8.6;
 allow 208.123.187.36;
 allow 209.141.32.181;
 allow 209.141.32.198;
@@ -941,6 +937,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -948,14 +945,12 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.4;
-allow 23.191.200.6;
+allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -998,7 +993,6 @@ allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
-allow 2602:f915:f:3b43::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
@@ -1205,7 +1199,6 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4f8:10a:2d23::2;
-allow 2a01:4f8:c0c:564::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1292,8 +1285,6 @@ allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
-allow 2a06:1700:1:108::b829:eee2;
-allow 2a06:1700:1:109::209:a94;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1479,7 +1470,6 @@ allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
-allow 2a0c:9f00:2:12fa::1;
 allow 2a0c:e300:b:b::b;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
 allow 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -1613,6 +1603,7 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a12:a800:2:1:45:80:158:75;
 allow 2a12:a800:2:1:45:80:158:93;
+allow 2a12:a800:8:1:45:94:31:68;
 allow 2a12:a800:9:1:193:26:115:140;
 allow 2a12:a800:9:1:193:26:115:212;
 allow 2a12:a800:9:1:193:26:115:43;
@@ -1638,8 +1629,6 @@ allow 37.114.63.5;
 allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
-allow 37.228.129.162;
-allow 37.228.129.168;
 allow 37.228.129.189;
 allow 37.228.129.5;
 allow 37.228.129.63;
@@ -1671,9 +1660,7 @@ allow 45.13.225.69;
 allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
-allow 45.134.48.153;
 allow 45.137.70.158;
-allow 45.137.99.16;
 allow 45.137.99.182;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1754,6 +1741,7 @@ allow 45.91.250.107;
 allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.168.192;
+allow 45.94.31.68;
 allow 45.95.169.102;
 allow 45.95.169.104;
 allow 45.95.169.109;
@@ -1768,7 +1756,6 @@ allow 46.38.243.210;
 allow 5.101.82.22;
 allow 5.104.84.183;
 allow 5.104.86.6;
-allow 51.120.1.199;
 allow 51.15.59.15;
 allow 51.161.198.74;
 allow 51.222.142.67;
@@ -1776,7 +1763,6 @@ allow 51.38.225.46;
 allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
-allow 52.233.83.66;
 allow 5.253.247.27;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1826,7 +1812,6 @@ allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
-allow 72.146.194.197;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
@@ -1858,6 +1843,7 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.145;
 allow 83.147.17.190;
+allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
 allow 83.97.20.77;
