--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -181,7 +181,6 @@ set_real_ip_from 164.132.172.209;
 set_real_ip_from 164.132.58.8;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
-set_real_ip_from 168.119.166.187;
 set_real_ip_from 171.25.193.131;
 set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
@@ -203,7 +202,6 @@ set_real_ip_from 172.104.243.155;
 set_real_ip_from 172.105.174.195;
 set_real_ip_from 172.105.20.12;
 set_real_ip_from 172.105.203.121;
-set_real_ip_from 172.212.105.150;
 set_real_ip_from 172.232.209.254;
 set_real_ip_from 172.233.82.41;
 set_real_ip_from 172.234.228.174;
@@ -218,7 +216,6 @@ set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
-set_real_ip_from 176.65.134.4;
 set_real_ip_from 176.65.148.133;
 set_real_ip_from 176.65.148.3;
 set_real_ip_from 176.65.149.100;
@@ -638,7 +635,7 @@ set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
-set_real_ip_from 198.167.206.252;
+set_real_ip_from 198.167.206.214;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -800,7 +797,6 @@ set_real_ip_from 205.185.121.177;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 206.166.251.193;
-set_real_ip_from 20.79.8.6;
 set_real_ip_from 208.123.187.36;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
@@ -941,6 +937,7 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
+set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -948,14 +945,12 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
-set_real_ip_from 23.191.200.4;
-set_real_ip_from 23.191.200.6;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -998,7 +993,6 @@ set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
 set_real_ip_from 2602:f6f6:2:dc17::1;
-set_real_ip_from 2602:f915:f:3b43::1;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1205,7 +1199,6 @@ set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:4f8:10a:2d23::2;
-set_real_ip_from 2a01:4f8:c0c:564::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
@@ -1292,8 +1285,6 @@ set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
 set_real_ip_from 2a06:1700:0:50::11;
-set_real_ip_from 2a06:1700:1:108::b829:eee2;
-set_real_ip_from 2a06:1700:1:109::209:a94;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
@@ -1479,7 +1470,6 @@ set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:6a41:c13:1337::107;
 set_real_ip_from 2a0c:9a40:8860:51::aa11;
-set_real_ip_from 2a0c:9f00:2:12fa::1;
 set_real_ip_from 2a0c:e300:b:b::b;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fe0b:181b;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -1613,6 +1603,7 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:a800:2:1:45:80:158:69;
 set_real_ip_from 2a12:a800:2:1:45:80:158:75;
 set_real_ip_from 2a12:a800:2:1:45:80:158:93;
+set_real_ip_from 2a12:a800:8:1:45:94:31:68;
 set_real_ip_from 2a12:a800:9:1:193:26:115:140;
 set_real_ip_from 2a12:a800:9:1:193:26:115:212;
 set_real_ip_from 2a12:a800:9:1:193:26:115:43;
@@ -1638,8 +1629,6 @@ set_real_ip_from 37.114.63.5;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.221.208.71;
 set_real_ip_from 37.228.129.128;
-set_real_ip_from 37.228.129.162;
-set_real_ip_from 37.228.129.168;
 set_real_ip_from 37.228.129.189;
 set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
@@ -1671,9 +1660,7 @@ set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.134.48.153;
 set_real_ip_from 45.137.70.158;
-set_real_ip_from 45.137.99.16;
 set_real_ip_from 45.137.99.182;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
@@ -1754,6 +1741,7 @@ set_real_ip_from 45.91.250.107;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.156.101;
 set_real_ip_from 45.9.168.192;
+set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.102;
 set_real_ip_from 45.95.169.104;
 set_real_ip_from 45.95.169.109;
@@ -1768,7 +1756,6 @@ set_real_ip_from 46.38.243.210;
 set_real_ip_from 5.101.82.22;
 set_real_ip_from 5.104.84.183;
 set_real_ip_from 5.104.86.6;
-set_real_ip_from 51.120.1.199;
 set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.161.198.74;
 set_real_ip_from 51.222.142.67;
@@ -1776,7 +1763,6 @@ set_real_ip_from 51.38.225.46;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.233.83.66;
 set_real_ip_from 5.253.247.27;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
@@ -1826,7 +1812,6 @@ set_real_ip_from 66.94.111.228;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
-set_real_ip_from 72.146.194.197;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
@@ -1858,6 +1843,7 @@ set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.29.128.145;
 set_real_ip_from 83.147.17.190;
+set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
